Revert "IJPL-149878 Constants for enabling IJent WSL file system in particular IDEs"
This reverts commit 57bba690b7b97239f3069e888fb01744b3c97faa.

GitOrigin-RevId: ea3266706fdee0ac2a1467f585fb3ce0568e13ae